[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://content/icons/large_unknown.png" type="Texture" id=2]
[ext_resource path="res://gui/fonts/FontLarge.tres" type="DynamicFont" id=3]
[ext_resource path="res://gui/buttons/button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://content/gamemode/unlockables/card-back.png" type="Texture" id=5]
[ext_resource path="res://content/gamemode/unlockables/UnlockOption.gd" type="Script" id=6]

[node name="UnlockOption" type="PanelContainer"]
margin_right = 406.0
margin_bottom = 311.0
rect_min_size = Vector2( 400, 0 )
focus_mode = 2
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 434.0
margin_bottom = 336.0
mouse_filter = 2
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 406.0
margin_bottom = 308.0
rect_min_size = Vector2( 350, 0 )
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 394.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 3 )
text = "new Dingsbums unlocked"
align = 1

[node name="TypeTitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 394.0
margin_bottom = 78.0
text = "Sword dome"
align = 1

[node name="IconRect" type="TextureRect" parent="MarginContainer/VBoxContainer" groups=["unstyled"]]
margin_top = 94.0
margin_right = 394.0
margin_bottom = 254.0
rect_min_size = Vector2( 280, 160 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="DescriptionLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 394.0
margin_bottom = 296.0
mouse_filter = 2
bbcode_enabled = true
fit_content_height = true

[node name="Back" type="TextureRect" parent="."]
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 434.0
margin_bottom = 465.0
texture = ExtResource( 5 )
expand = true

[node name="Tween" type="Tween" parent="."]

[connection signal="focus_entered" from="." to="." method="_on_LoadoutOption_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_LoadoutOption_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_LoadoutOption_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_LoadoutOption_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_LoadoutOption_mouse_exited"]
